Fix: Truncate  "Title", "Label" and "Hostname" columns (#811)

--- a/web/frontend/src/pages/Layout/layout.css
+++ b/web/frontend/src/pages/Layout/layout.css
@@ -55,8 +55,25 @@ main {
   align-items: center;
 }
 
+
+.react-resizable {
+  position: relative;
+  background-clip: padding-box;
+}
+
+.react-resizable-handle {
+  position: absolute;
+  right: -5px;
+  bottom: 0;
+  z-index: 1;
+  width: 10px;
+  height: 100%;
+  cursor: col-resize;
+}
+
 .truncate-option {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
